BASE-0/Parser0.jj
options {
  LOOKAHEAD=2;
}
PARSER_BEGIN(Parser)


/** ID lister. */
public class Parser {

  /** Main entry point. */
  public static void main(String args[]) {
    Parser parser = new Parser(System.in);
    ASTNode exp;

	Environment env = new Environment();
	
    while (true) {
	    try {
	      exp = parser.Start();
	      System.out.println("Syntax is okay: " + exp.eval(env) );
	    }
	    catch (Exception e) {
	      System.out.println ("Syntax Error!" + e.getMessage());
	      parser.ReInit(System.in);
	    }
    }
  }

}

PARSER_END(Parser)

SKIP :
{
  " "
}
/*| "\t"
| "\r"
| < "//" (~ ["\n","\r"])* ("\n"|"\r") >*/

TOKEN :
{
  < DEF : "def" | "DEF" >
	|
	< IN : "in" | "IN" >
	|
	< END : "end" | "END" > 
	| 
   < Id: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
  |
  < NUMBER : <DIGITS> | <DIGITS> "." <DIGITS> | <DIGITS> "." | "."<DIGITS> >  
  |
  < DIGITS : (["0"-"9"])+ >  
  |
  < PLUS : "+" >
  |
  < MINUS : "-">
  |
  < TIMES : "*">
  |
  < DIV : "/">
  |
  < LPAR : "(" >
  |
  < RPAR : ")" >
  |
  < EOL: "\n" | "\r" | "\r\n" >
| 
  < EQ : "=" >
}

ASTNode Start():{
   ASTNode t;
}
{
   t = Exp() <EOL>
   { return t; }
}

ASTNode Exp() :
{ Token op;
  ASTNode t1, t2; }
{
     t1=Term() ( ( op=<PLUS> | op=<MINUS> ) t2=Term() 
                 { if (op.kind == PLUS) 
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
                 } 
               ) *
     { return t1; } 
}

ASTNode Term() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Fact() ( ( op=<TIMES> | op=<DIV> ) t2 = Term() 
 		 { if (op.kind == TIMES) 
                         t1 = new ASTMult(t1,t2);
                   else  t1 = new ASTDiv(t1,t2);
                 }  
		)?
     { return t1; } 
}


ASTNode Fact() :
{ Token n; 
  ASTNode t1=null;
  ASTNode t2=null;
}
{
   ( n=<NUMBER>    {  t1 = new ASTNum(Integer.parseInt(n.image)); } 	 | <LPAR> t1=Exp() <RPAR> )
   { return t1; }
   | < MINUS > t1=Fact() { t1 = new ASTSub(t2,t1); 	return t1; }
   | < PLUS > t1=Fact() { return t1; }
   | n = < Id > { t1 = new ASTId(n.image); return t1; }
   | n = < DEF > ( < Id > < EQ > t1 = Fact() {  t1 = new ASTDef(n.image, t1); } )+
   			< IN > t2 = Exp() < END > { return t2; }
  
}
